Minor consistency changes to character sheets

--- a/character_sheets/Drav_Daava_Leech.tex
+++ b/character_sheets/Drav_Daava_Leech.tex
@@ -59,7 +59,8 @@
 \def\StashAmount{10}
 
 
-%%% Skills
+%%% Action ratings
+% Remember to include base values from your playbook to make sure XP-scaling works properly
 %% Insight
 \def\Hunt{0}
 \def\Study{2}
