--- a/character_sheets/Empty_Character.tex
+++ b/character_sheets/Empty_Character.tex
@@ -59,7 +59,8 @@
 \def\StashAmount{0}
 
 
-%%% Skills
+%%% Action ratings
+% Remember to include base values from your playbook to make sure XP-scaling works properly
 %% Insight
 \def\Hunt{0}
 \def\Study{0}
@@ -112,8 +113,8 @@
     \input{templates/CommonText}
     
     \begin{tikzpicture}[overlay]
-        \input{templates/CommonTikz}
         \input{\Template}
+        \input{templates/CommonTikz}
         
         %%% Input tikz addons
     \end{tikzpicture}
