--- a/misc_sheets/Drav_Daava_Craftables.tex
+++ b/misc_sheets/Drav_Daava_Craftables.tex
@@ -14,7 +14,7 @@
 \usepackage{multicol}
 \setlength{\columnsep}{1cm}
 
-\input{misc_sheets/template/Craftables.tex}
+\input{../misc_sheets/template/Craftables.tex}
 
 %%% Used for header
 \usepackage{fancyhdr}
