--- a/misc_sheets/template/Craftables.tex
+++ b/misc_sheets/template/Craftables.tex
@@ -5,7 +5,7 @@
 \usepackage{stringstrings}
 \usepackage{etoolbox}
 
-\input{misc_sheets/template/Font}
+\input{../misc_sheets/template/Font}
 
 %%% Misc helper macros
 \newcommand{\toroman}[1]{\uppercase\expandafter{\romannumeral#1\relax}}
