--- a/templates/preambles/Common.tex
+++ b/templates/preambles/Common.tex
@@ -26,7 +26,7 @@
 \renewcommand*\oldstylenums[1]{{\AlegreyaOsF #1}}
 
 % Used to easily call the correct class template
-\newcommand{\Template}{templates/\Class.tex}
+\newcommand{\Template}{../templates/\Class.tex}
 
 % If "Mule" is chosen as a veteran skill
 \def\MuleX{23.47cm}
