--- a/misc_sheets/Cultural_cheat_sheet.tex
+++ b/misc_sheets/Cultural_cheat_sheet.tex
@@ -4,7 +4,7 @@
 \usepackage{hyperref}
 \usepackage[margin=2.6cm]{geometry}
 
-\input{misc_sheets/template/Font}
+\input{../misc_sheets/template/Font}
 
 \begin{document}
 
