Update Drav's cheat sheet with "Studsolja"

--- a/misc_sheets/Drav_Daava_Craftables.tex
+++ b/misc_sheets/Drav_Daava_Craftables.tex
@@ -156,7 +156,11 @@ Creates a cloud of unnatural pitch darkness.}
 % Glidmedål
 \bandspecialcreation{Glidmedål}{1}{3}{Alkemisk}{2}
 \textit{Gör en yta väldigt hal.}
-Har ej lärt mig än!
+\\\\
+% Studsolja
+\bandspecialcreation{Studsolja}{3}{3}{Alkemisk}{1}
+\textit{Gör en yta väldigt studsig.}
+\HasAmount
 
 
 \section*{Drawbacks}
