Add extra stress box for Hound with Survivor, and make notes line up with notes lines

--- a/character_sheets/Empty_Character.tex
+++ b/character_sheets/Empty_Character.tex
@@ -2,7 +2,7 @@
 \input{../templates/preambles/Common.tex}
 
 %%% Set class
-\def\Class{Cutter}
+\def\Class{Hound}
 \input{../templates/preambles/\Class.tex}
 
 
@@ -47,7 +47,8 @@
 
 
 %%% Crew upgrades
-\lowercase{\def\CrewUpgrades{}}
+\lowercase{\def\CrewUpgrades{
+}}
 
 
 %%% Friends and enemies/rivals (zero-indexed)
@@ -82,7 +83,7 @@
 
 %%% Special abilities, just write them in as they are written in the playbook, including spaces
 \lowercase{\def\SpecialAbilities{
-    
+	
 }}
 
 
@@ -98,7 +99,7 @@
 \def\Notes{
     
 }
-%% Toggle notes lines, best to set to true if you want to add notes via this LaTeX
+%% Toggle notes lines
 \hidenoteslinesfalse
 
 
